CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_SEARCH__c.object
<CustomObject>
    <description>application search support</description>
    <fields>
        <fullName>DTE_PRCSD_APPLN__c</fullName>
        <description>DTE_PRCSD_APPLN</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_PRCSD_APPLN</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_RCVD_APPLN__c</fullName>
        <description>DTE_RCVD_APPLN</description>
        <label>DTE_RCVD_APPLN</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_WKDAY_APPLN__c</fullName>
        <description>DTE_WKDAY_APPLN</description>
        <label>DTE_WKDAY_APPLN</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IDN_APPLN</description>
        <label>IDN_APPLN</label>
        <referenceTo>T_APPLN_CASE__c</referenceTo>
        <relationshipLabel>Application Process Search</relationshipLabel>
        <relationshipName>Application_case_28</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_SEARCH_PRCS_APPLN__c</fullName>
        <description>IDN_SEARCH_PRCS_APPLN</description>
        <label>IDN_SEARCH_PRCS_APPLN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IND_CRTKR_PRIM__c</fullName>
        <description>IND_CRTKR_PRIM</description>
        <label>IND_CRTKR_PRIM</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST__c</fullName>
        <description>NAM_FIRST</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_FIRST</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST__c</fullName>
        <description>NAM_LAST</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_LAST</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_MI__c</fullName>
        <description>NAM_MI</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_MI</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_SSN__c</fullName>
        <description>NBR_SSN</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NBR_SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Application Process Search</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APS-{0}</displayFormat>
        <label>Application Process Search ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Process Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>